--- a/papers.org
+++ b/papers.org
@@ -1,14 +1,15 @@
+#+TITLE: Paper Readings
+#+AUTHOR: Ilker Kesen
 #+PROPERTY: like 1 2 3 4 5
 #+PROPERTY: link
 #+PROPERTY: index
 
-* Language Understanding for Text-based Games using Deep Reinforcement Learning
+* Language Undrstanding for Text-based Games using Deep Reinforcement Learning
   :PROPERTIES:
-  :index: 1
   :link: http://people.csail.mit.edu/regina/my_papers/TG15.pdf
   :like: 1
   :END:
-  
+
   + text-based
   + bag-of-words/bag-of-biagrams
   + deep reinforcement
@@ -16,7 +17,6 @@
 
 * Language to Logical Form with Neural Attention
   :PROPERTIES:
-  :index: 2
   :link: https://arxiv.org/pdf/1601.01280v2.pdf
   :like: 3
   :END:
@@ -26,24 +26,21 @@
 
 * Improving Neural Machine Translation Models with Monolingual Data
   :PROPERTIES:
-  :index: 3
   :link: http://arxiv.org/pdf/1511.06709v4.pdf
   :like: 4
   :END:
-  
+
   + machine translation
   + monolingual data? tam anlamadim
 
 * Distilling the Knowledge in a Neural Network
   :PROPERTIES:
-  :index: 4
   :link: http://arxiv.org/pdf/1503.02531v1.pdf
   :like: 2
   :END:
 
 * Pointer Networks
   :PROPERTIES:
-  :index: 5
   :link: http://arxiv.org/pdf/1506.03134v1.pdf
   :like: 1
   :END:
@@ -53,7 +50,6 @@
 
 * A Neural Conversational Model
   :PROPERTIES:
-  :index: 6
   :link: http://arxiv.org/abs/1506.05869
   :like: 1
   :END:
@@ -63,7 +59,6 @@
 
 * Learning to Execute
   :PROPERTIES:
-  :index: 7
   :link: http://arxiv.org/abs/1410.4615
   :like: 1
   :END:
@@ -73,7 +68,6 @@
 
 * Generating Sequences With Recurrent Neural Networks
   :PROPERTIES:
-  :index: 8
   :link: http://arxiv.org/abs/1308.0850
   :like: 2
   :END:
@@ -83,7 +77,6 @@
 
 * End-To-End Memory Networks
   :PROPERTIES:
-  :index: 9
   :link: http://arxiv.org/abs/1503.08895
   :like: 2
   :END:
@@ -92,7 +85,6 @@
 
 * Improved Semantic Representations From Tree-Structured Long Short-Term Memory Networks
   :PROPERTIES:
-  :index: 10
   :link: http://arxiv.org/abs/1503.00075
   :like: 2
   :END:
@@ -101,14 +93,12 @@
 
 * Recurrent Neural Network Regularization
   :PROPERTIES:
-  :index: 11
   :link: http://arxiv.org/abs/1409.2329
   :like: 3
   :END:
 
 * Deep Attention Recurrent Q-Network
   :PROPERTIES:
-  :index: 12
   :link: http://arxiv.org/pdf/1512.01693v1.pdf
   :like: 1
   :END:
@@ -118,7 +108,6 @@
 
 * Image Captioning with Semantic Attention
   :PROPERTIES:
-  :index: 13
   :link: http://arxiv.org/pdf/1603.03925v1.pdf
   :like: 1
   :END:
@@ -128,12 +117,116 @@
 
 * Adding Gradient Noise Improves Learning for Very Deep Networks
   :PROPERTIES:
-  :index: 14
   :link: http://arxiv.org/abs/1511.06807
   :like: 2
   :END:
 
   + avoid overfitting, lower loss
   + question answering vs.
+* An Empirical Exploration of Recurrent Network Architectures
+  :PROPERTIES:
+  :link: http://jmlr.org/proceedings/papers/v37/jozefowicz15.pdf
+  :like: 2
+  :END:
+
+  + LSTM/RNN
+  + bir suru modeli denemisler
 
 
+* MY BORDER
+
+* Grammar as a Foreign Language
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1412.7449
+  :like:     3
+  :END:
+
+  + LSTM
+  + unoptimized but faster
+  + syntactic constituency parsing
+
+* Listen, Attend, and Walk: Neural Mapping of Navigational Instructions to Action Sequences
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1506.04089
+  :like:     3
+  :END:
+
+* Move Evaluation in Go Using Deep Convolutional Neural Networks
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1412.6564
+  :like:     1
+  :END:
+
+  + CNN, GO
+  + daha onceki method, monte carlo tree search
+
+* Neural Programmer: Inducing Latent Programs with Gradient Descent
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1511.04834
+  :like:     1
+  :END:
+
+* DRAW: A Recurrent Neural Network For Image Generation
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1502.04623
+  :like:     4
+  :END:
+
+* Effective Approaches to Attention-based Neural Machine Translation
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1508.04025
+  :like:     2
+  :END:
+
+* Convolutional-Recursive Deep Learning for 3D Object Classification
+  :PROPERTIES:
+  :link:     http://papers.nips.cc/paper/4773-convolutional-recursive-deep-learning-for-3d-object-classification.pdf
+  :like:     3
+  :END:
+
+* ImageNet Classification with Deep Convolutional Neural Networks
+  :PROPERTIES:
+  :link:     http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf
+  :like:     3
+  :END:
+
+  + unlu paper, CNN
+
+* Framewise Phoneme Classification with Bidirectional LSTM and Other Neural Network Architectures
+  :PROPERTIES:
+  :link:     http://www.cs.toronto.edu/~graves/nn_2005.pdf
+  :like:     4
+  :END:
+
+* Training Very Deep Networks
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1507.06228
+  :like:     3
+  :END:
+
+* Show and Tell: A Neural Image Caption Generator
+  :PROPERTIES:
+  :link:     http://arxiv.org/pdf/1411.4555v2.pdf
+  :like:     1
+  :END:
+
+* Connectionist Temporal Classification: Labelling Unsegmented Sequence Data with Recurrent Neural Networks
+  :PROPERTIES:
+  :link:     http://www.cs.toronto.edu/~graves/icml_2006.pdf
+  :like:     4
+  :END:
+
+* Unitary Evolution Recurrent Neural Networks
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1511.06464
+  :like:     4
+  :END:
+
+* Learning Simple Algorithms from Examples
+  :PROPERTIES:
+  :link:     http://arxiv.org/abs/1511.07275
+  :like:     2
+  :END:
+
+
+* Sequence to Sequence Learning with Neural Networks
