LRCN paper summary added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -5,3 +5,10 @@
   pages={3156--3164},
   year={2015}
 }
+@inproceedings{donahue2015long,
+  title={Long-term recurrent convolutional networks for visual recognition and description},
+  author={Donahue, Jeffrey and Anne Hendricks, Lisa and Guadarrama, Sergio and Rohrbach, Marcus and Venugopalan, Subhashini and Saenko, Kate and Darrell, Trevor},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={2625--2634},
+  year={2015}
+}
