show, attend and tell paper added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -12,3 +12,13 @@
   pages={2625--2634},
   year={2015}
 }
+@article{xu2015show,
+  title={Show, attend and tell: Neural image caption generation with visual attention},
+  author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhutdinov, Ruslan and Zemel, Richard S and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1502.03044},
+  volume={2},
+  number={3},
+  pages={5},
+  year={2015},
+  publisher={CoRR}
+}
