karpathy paper overview added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -22,3 +22,16 @@
   year={2015},
   publisher={CoRR}
 }
+@inproceedings{karpathy2015deep,
+  title={Deep visual-semantic alignments for generating image descriptions},
+  author={Karpathy, Andrej and Fei-Fei, Li},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3128--3137},
+  year={2015}
+}
+@article{johnson2015densecap,
+  title={Densecap: Fully convolutional localization networks for dense captioning},
+  author={Johnson, Justin and Karpathy, Andrej and Fei-Fei, Li},
+  journal={arXiv preprint arXiv:1511.07571},
+  year={2015}
+}
