new paper summary added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -35,3 +35,9 @@
   journal={arXiv preprint arXiv:1511.07571},
   year={2015}
 }
+@article{chen2014learning,
+  title={Learning a recurrent visual representation for image caption generation},
+  author={Chen, Xinlei and Zitnick, C Lawrence},
+  journal={arXiv preprint arXiv:1411.5654},
+  year={2014}
+}
