new paper summary added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -41,3 +41,16 @@
   journal={arXiv preprint arXiv:1411.5654},
   year={2014}
 }
+@article{you2016image,
+  title={Image captioning with semantic attention},
+  author={You, Quanzeng and Jin, Hailin and Wang, Zhaowen and Fang, Chen and Luo, Jiebo},
+  journal={arXiv preprint arXiv:1603.03925},
+  year={2016}
+}
+@inproceedings{fang2015captions,
+  title={From captions to visual concepts and back},
+  author={Fang, Hao and Gupta, Saurabh and Iandola, Forrest and Srivastava, Rupesh K and Deng, Li and Doll{\'a}r, Piotr and Gao, Jianfeng and He, Xiaodong and Mitchell, Margaret and Platt, John C and others},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1473--1482},
+  year={2015}
+}
