add cites and a note about why I didn't include a figure

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -54,3 +54,16 @@
   pages={1473--1482},
   year={2015}
 }
+@inproceedings{long2015fully,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3431--3440},
+  year={2015}
+}
+@article{devlin2015exploring,
+  title={Exploring nearest neighbor approaches for image captioning},
+  author={Devlin, Jacob and Gupta, Saurabh and Girshick, Ross and Mitchell, Margaret and Zitnick, C Lawrence},
+  journal={arXiv preprint arXiv:1505.04467},
+  year={2015}
+}
