new paper review added

--- a/docs/survey.bib
+++ b/docs/survey.bib
@@ -1,4 +1,4 @@
-@inproceedings{vinyals2015show,
+fsu@inproceedings{vinyals2015show,
   title={Show and tell: A neural image caption generator},
   author={Vinyals, Oriol and Toshev, Alexander and Bengio, Samy and Erhan, Dumitru},
   booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
@@ -65,5 +65,11 @@
   title={Exploring nearest neighbor approaches for image captioning},
   author={Devlin, Jacob and Gupta, Saurabh and Girshick, Ross and Mitchell, Margaret and Zitnick, C Lawrence},
   journal={arXiv preprint arXiv:1505.04467},
+  year={2015}
+}
+@article{wu2015value,
+  title={What value high level concepts in vision to language problems?},
+  author={Wu, Qi and Shen, Chunhua and van den Hengel, Anton and Liu, Lingqiao and Dick, Anthony},
+  journal={arXiv preprint arXiv:1506.01144},
   year={2015}
 }
